--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
-/tests            export-ignore
-/.gitignore       export-ignore
-/.travis.yml      export-ignore
-/.styleci.yml     export-ignore
-/.gitattributes   export-ignore
-/.scrutinizer.yml export-ignore
+/tests           export-ignore
+.gitignore       export-ignore
+.travis.yml      export-ignore
+.styleci.yml     export-ignore
+.gitattributes   export-ignore
+.scrutinizer.yml export-ignore
