--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,17 @@
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.*"
+        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.*",
+        "phpunit/phpunit": ">=6",
+        "php-coveralls/php-coveralls": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "codacy/coverage": "^1.4",
+        "league/pipeline": "^1.0|^0.3",
+        "phan/phan": "^0.12",
+        "infection/infection": "~0.8",
+        "phpstan/phpstan": "~0.9",
+        "mockery/mockery": "^1.0",
+        "vimeo/psalm": ">=1.1"
     },
     "autoload": {
         "psr-4": {
