Added myself to the list of authors, as I am responsible for all new bugs henceforth

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
         {
             "name": "JhaoDa",
             "role": "Developer"
+        },
+        {
+            "name": "Alexey Kopytko",
+            "email": "alexey@kopytko.com",
+            "homepage": "https://www.alexeykopytko.com"
         }
     ],
     "require": {
