--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
     ],
     "require": {
         "php": ">=7.0",
+        "guzzlehttp/guzzle": "^6.3",
         "jms/serializer": "^1.8",
-        "guzzlehttp/guzzle": "^6.3"
+        "sanmai/pipeline": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=6",
