.travis.yml: submit coverage to coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ script:
   - make ci --keep-going COMPOSER='/bin/sh -c composer'
   - composer validate
 
+after_success:
+  - travis_retry php vendor/bin/php-coveralls
