Updated copyright section of the LICENSE.
Since GitHub thinks I'm the number one contributor... Guess I have the moral right to add myself to the header.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         },
         {
             "name": "Alexey Kopytko",
+            "role": "Developer",
             "email": "alexey@kopytko.com",
             "homepage": "https://www.alexeykopytko.com"
         }
