--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,13 +1,6 @@
 <?php
 
-$header = <<<'EOF'
-This file is part of Cdek SDK package.
-
-© Appwilio (http://appwilio.com), greabock (https://github.com/greabock), JhaoDa (https://github.com/jhaoda)
-
-For the full copyright and license information, please view the LICENSE
-file that was distributed with this source code.
-EOF;
+$header = 'This code is licensed under the MIT License.'.substr(file_get_contents('LICENSE'), strlen('The MIT License'));
 
 return PhpCsFixer\Config::create()
     ->setRiskyAllowed(true)
