--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -20,7 +20,7 @@ return PhpCsFixer\Config::create()
         'phpdoc_add_missing_param_annotation' => true,
         'phpdoc_order' => true,
         'visibility_required' => true,
-        'header_comment' => ['header' => $header, 'separate' => 'bottom', 'location' => 'after_open'],
+        'header_comment' => ['header' => $header, 'separate' => 'bottom', 'location' => 'after_open', 'comment_type' => 'PHPDoc'],
         'ternary_to_null_coalescing' => true,
         'yoda_style' => null,
         'phpdoc_to_comment' => false,
