--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sanmai/cdek-sdk",
     "keywords": ["CDEK", "sdk", "delivery", "СДЭК", "служба доставки"],
     "homepage": "https://github.com/sanmai/cdek-sdk",
-    "description": "PHP SDK для API СДЭК",
+    "description": "СДЭК PHP SDK, библиотека для работы с API СДЭК",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -53,7 +53,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.4.x-dev"
+            "dev-master": "0.5.x-dev"
         }
     }
 }
