--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
         "sanmai/pipeline": "^2.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.11",
+        "friendsofphp/php-cs-fixer": "^2.13",
         "illuminate/support": "^5.2",
         "infection/infection": ">=0.8",
         "laravel/framework": "^5.2",
-        "phan/phan": ">=0.12.9",
+        "phan/phan": "^1.0",
         "php-coveralls/php-coveralls": "^2.0",
         "phpstan/phpstan": ">=0.9",
         "phpunit/phpunit": ">=6",
