--- a/composer.json
+++ b/composer.json
@@ -55,5 +55,8 @@
         "branch-alias": {
             "dev-master": "0.5.x-dev"
         }
-    }
+    },
+	"non-feature-branches": [
+        ".*"
+    ]
 }
