--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,12 @@
         "php": "^7.0",
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer": "^1.8",
+        "psr/log": "^1.0",
         "sanmai/pipeline": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
+        "gamez/psr-testlogger": "^3.0",
         "illuminate/support": "^5.2",
         "infection/infection": ">=0.8",
         "laravel/framework": "^5.2",
