Package: account that VolumeWeight is exactly null if not set

--- a/infection.json.dist
+++ b/infection.json.dist
@@ -11,6 +11,7 @@
     "mutators": {
         "@default": true,
         "IdenticalEqual": false,
+        "NotIdenticalNotEqual": false,
         "@cast": false
     }
 }
