Automatically handle mixed-style XML attributes CDEK may provide at times
Fixes #6

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "sanmai/pipeline": "^2.0"
     },
     "suggest": {
+        "ext-ctype": "For flexible attribute name handling",
         "sanmai/pindx": "For postal code validation"
     },
     "require-dev": {
