--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,18 @@
-/tests           export-ignore
-.gitignore       export-ignore
-.travis.yml      export-ignore
-.styleci.yml     export-ignore
-.gitattributes   export-ignore
-.scrutinizer.yml export-ignore
+.gitignore                 export-ignore
+/.coveralls.yml            export-ignore
+/.gitattributes            export-ignore
+/.github/                  export-ignore
+/.phan/                    export-ignore
+/.php_cs.dist              export-ignore
+/.phpstan.neon             export-ignore
+/.scrutinizer.yml          export-ignore
+/.styleci.yml              export-ignore
+/.travis.yml               export-ignore
+/CODE_OF_CONDUCT.md        export-ignore
+/CONTRIBUTING.md           export-ignore
+/Makefile                  export-ignore
+/PULL_REQUEST_TEMPLATE.md  export-ignore
+/infection.json.dist       export-ignore
+/phpunit.xml.dist          export-ignore
+/psalm.xml                 export-ignore
+/tests                     export-ignore
