--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -27,6 +27,7 @@ return PhpCsFixer\Config::create()
         'yoda_style' => null,
         'phpdoc_to_comment' => false,
         'binary_operator_spaces' => ['operators' => ['=>' => BinaryOperatorSpacesFixer::ALIGN]],
+        'strict_comparison' => true,
     ])
     ->setFinder(
         PhpCsFixer\Finder::create()
