Append our package name and a commit hash to the default user-agent

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,4 @@
 /phpunit.xml.dist          export-ignore
 /psalm.xml                 export-ignore
 /tests                     export-ignore
+/src/CdekClient.php        export-subst
