Try to ask Scrutinizer CI to ignore tests in its analysis

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,5 +4,8 @@ build:
             version: 7.2
 
 filter:
+    paths:
+        - src/
     excluded_paths:
-        - examples
+        - examples/
+        - tests/
