--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - nightly
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - nightly
 
 cache:
   directories:
