Allow phpenv config-rm to fail (fails on nightly)

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ cache:
     - build/cache
 
 install:
-  - phpenv config-rm xdebug.ini
+  - phpenv config-rm xdebug.ini || true
   - composer install --prefer-dist
 
 script:
