--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - nightly
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - nightly
 
 stages:
   - analyze
@@ -31,7 +34,7 @@ cache:
     - build/cache
 
 install:
-  - phpenv config-rm xdebug.ini
+  - phpenv config-rm xdebug.ini || true
   - composer install --prefer-dist
 
 script:
