--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ php:
   - 7.0
   - 7.1
   - 7.2
-  - nightly
+  - 7.3
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - nightly
 
 stages:
   - analyze
@@ -36,7 +34,7 @@ cache:
 install:
   - phpenv config-rm xdebug.ini || true
   - composer remove --no-update --dev phan/phan phpstan/phpstan vimeo/psalm infection/infection friendsofphp/php-cs-fixer
-  - composer install --prefer-dist --ignore-platform-reqs
+  - composer install --prefer-dist
 
 script:
   - make ci-test --keep-going
