yamllint wants to scold me to no end for too long lines, let's fix that

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,9 @@ cache:
 
 install:
   - phpenv config-rm xdebug.ini || true
-  - composer remove --no-update --dev phan/phan phpstan/phpstan vimeo/psalm infection/infection friendsofphp/php-cs-fixer
+  - composer remove --no-update --dev
+      phan/phan phpstan/phpstan vimeo/psalm
+      infection/infection friendsofphp/php-cs-fixer
   - composer install --prefer-dist
 
 script:
