--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         "docs": "https://github.com/sanmai/cdek-sdk/blob/master/README.md"
     },
     "require": {
-        "php": "^7.0",
+        "php": "^5.6|^7.0",
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer": "^1.8",
         "psr/log": "^1.0",
-        "sanmai/pipeline": "^2.0"
+        "sanmai/pipeline": "^0.3.1|^2.0"
     },
     "suggest": {
         "ext-ctype": "For flexible attribute name handling",
@@ -42,14 +42,14 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "gamez/psr-testlogger": "^3.0",
+        "gamez/psr-testlogger": "^1.0.5|^3.0",
         "illuminate/support": "^5.2",
         "infection/infection": ">=0.8",
         "laravel/framework": "^5.2",
         "phan/phan": "^1.0",
         "php-coveralls/php-coveralls": "^2.1",
         "phpstan/phpstan": ">=0.9",
-        "phpunit/phpunit": ">=6",
+        "phpunit/phpunit": ">=5",
         "vimeo/psalm": ">=1.1"
     },
     "autoload": {
