--- a/composer.json
+++ b/composer.json
@@ -44,12 +44,12 @@
         "friendsofphp/php-cs-fixer": "^2.13",
         "gamez/psr-testlogger": "^3.0",
         "illuminate/support": "^5.2",
-        "infection/infection": ">=0.8",
+        "infection/infection": ">=0.10",
         "laravel/framework": "^5.2",
         "phan/phan": "^1.0",
         "php-coveralls/php-coveralls": "^2.1",
-        "phpstan/phpstan": ">=0.9",
-        "phpunit/phpunit": ">=6",
+        "phpstan/phpstan": ">=0.10",
+        "phpunit/phpunit": "^6.5|^7.4",
         "vimeo/psalm": ">=1.1"
     },
     "autoload": {
