--- a/.gitattributes
+++ b/.gitattributes
@@ -15,5 +15,6 @@
 /infection.json.dist       export-ignore
 /phpunit.xml.dist          export-ignore
 /psalm.xml                 export-ignore
+/appveyor.yml              export-ignore
 /tests                     export-ignore
 /src/CdekClient.php        export-subst
