Fix remaining Phan/PHPStan issues

--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -1,3 +1,5 @@
 parameters:
 	excludes_analyse:
 		- %currentWorkingDirectory%/tests/Common/MagicSettersTest.php
+	ignoreErrors:
+		- '#@return has invalid value.*ArrayIterator<array-key,#'
