Inject a known API endpoint for test requests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="vendor/autoload.php" colors="true">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
+         bootstrap="vendor/autoload.php" colors="true">
   <testsuites>
     <testsuite name="Test Suite">
       <directory>tests</directory>
@@ -15,4 +17,7 @@
       <directory suffix=".php">src/</directory>
     </whitelist>
   </filter>
+  <php>
+    <env name="CDEK_BASE_URL" value="http://integration.edu.cdek.ru" />
+  </php>
 </phpunit>
