Enable integration testing on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,24 @@ matrix:
 stages:
   - analyze
   - test
+  - integration
 
 jobs:
   exclude:
     - php: 7.2
   include:
-    - if: branch = master
+    - stage: integration
       php: 7.0
-      env: GROUP=integration
+      env:
+        - GROUP=integration
+        - CDEK_ACCOUNT=7JM7K5twfzEV1ssCRklthcIPbbVZrZrZ
+        - CDEK_PASSWORD=t8XBoL1rUofIK9dKoXVB3Tji2F2hPHSk
+    - stage: integration
+      php: 7.0
+      env:
+        - GROUP=integration
+        - CDEK_ACCOUNT=z9GRRu7FxmO53CQ9cFfI6qiy32wpfTkd
+        - CDEK_PASSWORD=w24JTCv4MnAcuRTx0oHjHLDtyt3I6IBq
     - stage: analyze
       php: 7.2
       install:
