--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
     ],
     "require": {
         "php": "^7.0",
+        "ext-SimpleXML": "*",
+        "ext-json": "*",
+        "ext-libxml": "*",
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer": "^1.11",
         "psr/log": "^1.0",
