--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -28,6 +28,7 @@ return PhpCsFixer\Config::create()
         'phpdoc_to_comment' => false,
         'binary_operator_spaces' => ['operators' => ['=>' => BinaryOperatorSpacesFixer::ALIGN]],
         'strict_comparison' => true,
+        'native_function_invocation' => true,
     ])
     ->setFinder(
         PhpCsFixer\Finder::create()
