--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - php: nightly
-    - env: GROUP=integration
+    - stage: integration
 
 stages:
   - analyze
