Branch-out Serializer into a separate package
...So we can finally support jms/serializer 3.0 in all its glory

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer": "^1.11",
         "psr/log": "^1.0",
+        "sanmai/cdek-sdk-serializer": "^0.1.0",
         "sanmai/pipeline": "^0.3.2 || ^2.0 || ^3.0.1"
     },
     "conflict": {},
