Add support for Serializer 3.0

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "ext-libxml": "*",
         "guzzlehttp/guzzle": "^6.3",
         "psr/log": "^1.0",
-        "sanmai/cdek-sdk-serializer": "^0.1",
+        "sanmai/cdek-sdk-serializer": "^0.1 || ^0.2",
         "sanmai/pipeline": "^0.3.2 || ^2.0 || ^3.0.1"
     },
     "conflict": {},
