--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "hughgrigg/php-business-time": "Finds next working day, helps with delivery estimates",
         "monolog/monolog": "For advanced logging and debugging",
         "sanmai/cdek-info": "For related constant enumerations and references",
-        "sanmai/pindx": "For postal code validation"
+        "sanmai/pindx": "For postal code validation",
+        "sanmai/hoa-protocol": "If you have trouble with a conflicting resolve()"
     },
     "config": {
         "sort-packages": true
