Test on PHP 7.4, bump analyze stage to use PHP 7.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4snapshot
   - nightly
 env:
   - GROUP=default
@@ -14,6 +15,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - php: nightly
+    - php: 7.4snapshot
     - stage: integration
 
 stages:
@@ -23,7 +25,7 @@ stages:
 
 jobs:
   exclude:
-    - php: 7.2
+    - php: 7.3
   include:
     - stage: integration
       php: 7.0
@@ -38,7 +40,7 @@ jobs:
         - CDEK_ACCOUNT=z9GRRu7FxmO53CQ9cFfI6qiy32wpfTkd
         - CDEK_PASSWORD=w24JTCv4MnAcuRTx0oHjHLDtyt3I6IBq
     - stage: analyze
-      php: 7.2
+      php: 7.3
       install:
         - pecl install ast
         - phpenv config-rm xdebug.ini
@@ -57,7 +59,8 @@ install:
   - composer remove --no-update --dev
       phan/phan phpstan/phpstan vimeo/psalm
       infection/infection friendsofphp/php-cs-fixer
-  - composer install --prefer-dist
+  - if [[ $TRAVIS_PHP_VERSION = nightly ]]; then export COMPOSER_FLAGS="--ignore-platform-reqs"; fi
+  - travis_retry composer install --prefer-dist $COMPOSER_FLAGS
 
 script:
   - make ci-test --keep-going PHPUNIT_GROUP=$GROUP
