--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
   - 7.1
   - 7.2
   - 7.3
-  - 7.4snapshot
+  - 7.4
   - nightly
 env:
   - GROUP=default
@@ -15,7 +15,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - php: nightly
-    - php: 7.4snapshot
+    - php: 7.4
     - stage: integration
 
 stages:
