--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -4,3 +4,4 @@ parameters:
 	ignoreErrors:
 		- '#tag @var does not match any variable in the foreach loop#'
 		- '#but the class implements:.*IteratorAggregate#'
+		- '#Access to private property.*result#'
