--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "ext-SimpleXML": "*",
         "ext-json": "*",
         "ext-libxml": "*",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^6.3 || ^7.0",
         "psr/log": "^1.0",
         "sanmai/cdek-sdk-serializer": "^0.1 || ^0.2",
         "sanmai/pipeline": "^0.3.2 || ^2.0 || ^3.0.1"
