--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "gamez/psr-testlogger": "^3.0",
         "illuminate/support": "^5.2",
         "infection/infection": ">=0.10",
-        "laravel/framework": "^5.2",
+        "laravel/framework": "^5.2 || ^6 || ^7",
+        "orchestra/testbench": "^3 || ^4 || ^5",
         "phan/phan": "^1 <1.3 || >1.3.0",
         "php-coveralls/php-coveralls": "^2.1",
         "phpstan/phpstan": ">=0.10",
