--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ install:
       phan/phan phpstan/phpstan vimeo/psalm
       infection/infection friendsofphp/php-cs-fixer
   - if [[ $TRAVIS_PHP_VERSION = nightly ]]; then export COMPOSER_FLAGS="--ignore-platform-reqs"; fi
-  - travis_retry composer install --prefer-dist $COMPOSER_FLAGS
+  - travis_retry composer update --prefer-dist $COMPOSER_FLAGS
 
 script:
   - make ci-test --keep-going PHPUNIT_GROUP=$GROUP
