--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "ext-SimpleXML": "*",
         "ext-json": "*",
         "ext-libxml": "*",
