--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,4 +56,5 @@ jobs:
 
       - name: Run tests
         run: |
+          sed -i s/libxml_disable_entity_loader/@libxml_disable_entity_loader/g vendor/jms/serializer/src/XmlDeserializationVisitor.php
           vendor/bin/phpunit
