Fix this and that

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ install:
 
 script:
   - sed -i s/libxml_disable_entity_loader/@libxml_disable_entity_loader/g vendor/jms/serializer/src/XmlDeserializationVisitor.php
+  - sed -i 's/count.*nodes/count($nodes??[]/' vendor/jms/serializer/src/XmlDeserializationVisitor.php
   - make ci-test --keep-going PHPUNIT_GROUP=$GROUP
 
 after_success:
