--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "phan/phan": "^1 <1.3 || >1.3.0",
         "php-coveralls/php-coveralls": "^2.1",
         "phpstan/phpstan": ">=0.10",
-        "phpunit/phpunit": "^8.0 || ^9.4",
+        "phpunit/phpunit": "^9.4",
         "sanmai/phpunit-legacy-adapter": "^6 || ^8",
         "vimeo/psalm": ">=3.0.16"
     },
