--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
-         executionOrder="random" resolveDependencies="true"
-         bootstrap="vendor/autoload.php" colors="true">
+<phpunit
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
+  executionOrder="random"
+  resolveDependencies="true"
+  bootstrap="vendor/autoload.php"
+  colors="true"
+>
+  <coverage>
+    <include>
+      <directory suffix=".php">src/</directory>
+    </include>
+  </coverage>
   <testsuites>
     <testsuite name="Test Suite">
       <directory>tests</directory>
@@ -13,13 +22,8 @@
       <group>integration</group>
     </exclude>
   </groups>
-  <filter>
-    <whitelist>
-      <directory suffix=".php">src/</directory>
-    </whitelist>
-  </filter>
   <php>
-    <env name="CDEK_BASE_URL" value="http://integration.edu.cdek.ru" />
+    <env name="CDEK_BASE_URL" value="http://integration.edu.cdek.ru"/>
     <ini name="date.timezone" value="UTC"/>
   </php>
 </phpunit>
