--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,13 @@
     },
     "conflict": {},
     "require-dev": {
+        "ergebnis/composer-normalize": "^2.9 <2.10",
         "friendsofphp/php-cs-fixer": "^2.14",
         "gamez/psr-testlogger": "^3.0",
-        "illuminate/support": "^5.2",
+        "illuminate/support": ">=5.2",
         "infection/infection": ">=0.10",
-        "laravel/framework": "^5.2 || ^6 || ^7",
-        "orchestra/testbench": "^3 || ^4 || ^5",
+        "laravel/framework": ">=5.2",
+        "orchestra/testbench": ">=3",
         "phan/phan": "^1 <1.3 || >1.3.0",
         "php-coveralls/php-coveralls": "^2.1",
         "phpstan/phpstan": ">=0.10",
