--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,9 +17,9 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-version: [7.3, 7.4]
+        php-version: ['7.4']
         include:
-          - { operating-system: 'ubuntu-latest', php-version: '8.0', composer-flags: '--ignore-platform-req=php' }
+          - { operating-system: 'ubuntu-latest', php-version: '8.0', composer-flags: '' }
 
     name: CI on ${{ matrix.operating-system }} with PHP ${{ matrix.php-version }}
 
